//    Copyright 2019 Google Inc.
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        https://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

package google.fhir.r4.core;

import "google/protobuf/any.proto";
import "proto/annotations.proto";
import "proto/r4/core/codes.proto";
import "proto/r4/core/datatypes.proto";

option java_multiple_files = true;
option java_package = "com.google.fhir.r4.core";
option go_package = "github.com/google/fhir/go/proto/r4/core";
option (.google.fhir.proto.fhir_version) = R4;

// Auto-generated from StructureDefinition for CatalogEntry, last updated
// 2019-11-01T09:29:23.356+11:00. An entry in a catalog. See
// http://hl7.org/fhir/StructureDefinition/CatalogEntry
message CatalogEntry {
  option (.google.fhir.proto.structure_definition_kind) = KIND_RESOURCE;
  option (.google.fhir.proto.fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/CatalogEntry";

  // Logical id of this artifact
  Id id = 1;

  // Metadata about the resource
  Meta meta = 2;

  // A set of rules under which this content was created
  Uri implicit_rules = 3;

  // Language of the resource content
  Code language = 4;

  // Text summary of the resource, for human interpretation
  Narrative text = 5;

  // Contained, inline Resources
  repeated protobuf.Any contained = 6;

  // Field 7 reserved for strongly-typed ContainedResource for id:
  // CatalogEntry.contained
  reserved 7;

  // Additional content defined by implementations
  repeated Extension extension = 8;

  // Extensions that cannot be ignored
  repeated Extension modifier_extension = 9;

  // Unique identifier of the catalog item
  repeated Identifier identifier = 10;

  // The type of item - medication, device, service, protocol or other
  CodeableConcept type = 11;

  // Whether the entry represents an orderable item
  Boolean orderable = 12
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

  // The item that is being defined
  Reference referenced_item = 13 [
    (.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR,
    (.google.fhir.proto.valid_reference_type) = "Medication",
    (.google.fhir.proto.valid_reference_type) = "Device",
    (.google.fhir.proto.valid_reference_type) = "Organization",
    (.google.fhir.proto.valid_reference_type) = "Practitioner",
    (.google.fhir.proto.valid_reference_type) = "PractitionerRole",
    (.google.fhir.proto.valid_reference_type) = "HealthcareService",
    (.google.fhir.proto.valid_reference_type) = "ActivityDefinition",
    (.google.fhir.proto.valid_reference_type) = "PlanDefinition",
    (.google.fhir.proto.valid_reference_type) = "SpecimenDefinition",
    (.google.fhir.proto.valid_reference_type) = "ObservationDefinition",
    (.google.fhir.proto.valid_reference_type) = "Binary"
  ];

  // Any additional identifier(s) for the catalog item, in the same granularity
  // or concept
  repeated Identifier additional_identifier = 14;

  // Classification (category or class) of the item entry
  repeated CodeableConcept classification = 15;

  // draft | active | retired | unknown
  message StatusCode {
    option (.google.fhir.proto.structure_definition_kind) = KIND_PRIMITIVE_TYPE;
    option (.google.fhir.proto.fhir_valueset_url) =
        "http://hl7.org/fhir/ValueSet/publication-status";
    option (.google.fhir.proto.fhir_profile_base) =
        "http://hl7.org/fhir/StructureDefinition/code";

    PublicationStatusCode.Value value = 1;

    String id = 2;

    repeated Extension extension = 3;
  }
  StatusCode status = 16;

  // The time period in which this catalog entry is expected to be active
  Period validity_period = 17;

  // The date until which this catalog entry is expected to be active
  DateTime valid_to = 18;

  // When was this catalog last updated
  DateTime last_updated = 19;

  // Additional characteristics of the catalog entry
  repeated CodeableConcept additional_characteristic = 20;

  // Additional classification of the catalog entry
  repeated CodeableConcept additional_classification = 21;

  // An item that this catalog entry is related to
  message RelatedEntry {
    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // triggers | is-replaced-by
    message RelationtypeCode {
      option (.google.fhir.proto.structure_definition_kind) =
          KIND_PRIMITIVE_TYPE;
      option (.google.fhir.proto.fhir_valueset_url) =
          "http://hl7.org/fhir/ValueSet/relation-type";
      option (.google.fhir.proto.fhir_profile_base) =
          "http://hl7.org/fhir/StructureDefinition/code";

      CatalogEntryRelationTypeCode.Value value = 1;

      String id = 2;

      repeated Extension extension = 3;
    }
    RelationtypeCode relationtype = 4
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

    // The reference to the related item
    Reference item = 5 [
      (.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR,
      (.google.fhir.proto.valid_reference_type) = "CatalogEntry"
    ];
  }
  repeated RelatedEntry related_entry = 22;
}
